--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css" />
 	<link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/alt1-currentskin/skinstyle.css"/>
 	<link rel="stylesheet" type="text/css" href="https://runeapps.org/runeappslib.css" />
-	<script type="text/javascript" src="https://runeapps.org/apps/alt1/pricecheck/tooltip.bundle.js"></script>
-	<script type="text/javascript" src="https://runeapps.org/runeappslib.js"></script>
-	<script type="text/javascript" src="https://runeapps.org/imagedetect.js"></script>
-	<script type="text/javascript" src="https://runeapps.org/alt1lib.js"></script>
-	<script type="text/javascript" src="https://runeapps.org/imagelibs/tooltip.js"></script>
-	<script type="text/javascript" src="bank.js"></script>
-	<script type="text/javascript" src="scripts.js"></script>
+	<script type="text/javascript" src="scripts/tooltip.bundle.js"></script>
+	<script type="text/javascript" src="scripts/runeappslib.js"></script>
+	<script type="text/javascript" src="scripts/imagedetect.js"></script>
+	<script type="text/javascript" src="scripts/alt1lib.js"></script>
+	<script type="text/javascript" src="scripts/tooltip.js"></script>
+	<script type="text/javascript" src="scripts/bank.js"></script>
+	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<style type="text/css">
 		body{overflow-y:auto !important;}
 
