--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
 				.item-optvalue{flex:0;}
 	</style>
 </head>
-<body class="nis" onload="start();"></body>
+<body>
+    <img src="./images/testbank.png" />
+</body>
 </html>
