--- a/index.html
+++ b/index.html
@@ -57,7 +57,5 @@
 				.item-optvalue{flex:0;}
 	</style>
 </head>
-<body>
-    <img src="./images/testbank.png" />
-</body>
+<body class="nis" onload="start();"></body>
 </html>
