--- a/index.html
+++ b/index.html
@@ -57,5 +57,5 @@
 				.item-optvalue{flex:0;}
 	</style>
 </head>
-<body class="nis" onload="start();"></body>
+<body class="nis" onload="start();"><img src="https://dirhazg.github.io/bank-checker/images/testbank.png" /></body>
 </html>
