--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
 				.item-optvalue{flex:0;}
 	</style>
 </head>
-<body class="nis" onload="start();"><img src="https://dirhazg.github.io/bank-checker/images/testbank.png" /></body>
+<body class="nis" onload="start();">
+    <canvas id="myCanvas" width="2000" height="2000">
+        <img src="https://dirhazg.github.io/bank-checker/images/testbank.png" />
+    </canvas>
+</body>
 </html>
