--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 	</style>
 </head>
 <body class="nis" onload="start();">
-    <img src="https://dirhazg.github.io/bank-checker/images/testbank.png" />
-    <canvas id="myCanvas" width="2000" height="2000">
-        
-    </canvas>
+    <div style="background-image: url('https://dirhazg.github.io/bank-checker/images/testbank.png');"> 
+        <canvas id="myCanvas" width="2000" height="2000"></canvas>
+    </div>
 </body>
 </html>
