--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	</style>
 </head>
 <body class="nis" onload="start();">
-    <!-- <div style="background-image: url('https://dirhazg.github.io/bank-checker/images/testbank.png');"> 
+    <div style="background-image: url('https://dirhazg.github.io/bank-checker/images/testbank.png');"> 
         <canvas id="myCanvas" width="2000" height="2000"></canvas>
-    </div> -->
+    </div>
 </body>
 </html>
