--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="scripts/tooltip.js"></script>
 	<script type="text/javascript" src="scripts/bank.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
+	<script type="text/javascript" src="scripts/pixelmatch.js"></script>"
 	<style type="text/css">
 		body{overflow-y:auto !important;}
 
@@ -58,8 +59,8 @@
 	</style>
 </head>
 <body class="nis" onload="start();">
-    <div style="background-image: url('https://dirhazg.github.io/bank-checker/images/testbank.png');"> 
+    <!-- <div style="background-image: url('http://localhost:8080/images/testbank.png');"> 
         <canvas id="myCanvas" width="2000" height="2000"></canvas>
-    </div>
+    </div> -->
 </body>
 </html>
