--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<script type="text/javascript" src="scripts/alt1lib.js"></script>
 	<script type="text/javascript" src="scripts/tooltip.js"></script>
 	<script type="text/javascript" src="scripts/bank.js"></script>
+	<script type="text/javascript" src="scripts/materials.js"></script>
+	<script type="text/javascript" src="scripts/materialstorage.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<script type="text/javascript" src="scripts/pixelmatch.js"></script>
     <script type="text/javascript" src="scripts/artefacts.js"></script>
