--- a/manual.html
+++ b/manual.html
@@ -2,7 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css" />
+	<link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://runeapps.org/runeappslib.css">
 	<link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/alt1-currentskin/skinstyle.css"/>
 	<link rel="stylesheet" type="text/css" href="https://runeapps.org/runeappslib.css" />
 	<script type="text/javascript" src="scripts/tooltip.bundle.js"></script>
@@ -11,9 +17,13 @@
 	<script type="text/javascript" src="scripts/alt1lib.js"></script>
 	<script type="text/javascript" src="scripts/tooltip.js"></script>
 	<script type="text/javascript" src="scripts/bank.js"></script>
+	<script type="text/javascript" src="scripts/materials.js"></script>
+	<script type="text/javascript" src="scripts/materialstorage.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
-	<script type="text/javascript" src="scripts/pixelmatch.js"></script>"
-	<script type="text/javascript" src="scripts/artefacts.js"></script>"
+	<script type="text/javascript" src="scripts/pixelmatch.js"></script>
+    <script type="text/javascript" src="scripts/artefacts.js"></script>
+    <script type="text/javascript" src="scripts/imagediff.min.js"></script>
+    <script src="scripts/data.js"></script>
 	<style type="text/css">
 		body{overflow-y:auto !important;}
 
@@ -59,8 +69,8 @@
 				.item-optvalue{flex:0;}
 	</style>
 </head>
-<body class="nis" onload="start();">
-    <div style="background-image: url('http://localhost:8080/images/shanabank1.png');"> 
+<body class="nis">
+    <div style="background-image: url('http://localhost:8080/images/testbank.png');"> 
         <canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
