--- a/manual.html
+++ b/manual.html
@@ -70,7 +70,7 @@
 	</style>
 </head>
 <body class="nis">
-    <div style="background-image: url('http://localhost:8080/images/testbank.png');"> 
+    <div style="background-image: url('http://localhost:8080/images/mats1.png');"> 
         <canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
