--- a/manual.html
+++ b/manual.html
@@ -70,8 +70,8 @@
 	</style>
 </head>
 <body class="nis">
-    <div style="background-image: url('http://localhost:8080/images/testmats1.png');"> 
-        <canvas id="myCanvas" width="2000" height="2000"></canvas>
+    <div style="background-image: url('http://localhost:8080/images/silentbank1.png');"> 
+		<canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
 </html>
