--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <div class="col-6 sort" data-sort='level'>
                 Materials
             </div>
+            <div class="mat-col">
+                
+            </div>
             <div class="col sort" data-sort='qty'>
                 Qty
             </div>
