--- a/index.html
+++ b/index.html
@@ -85,17 +85,15 @@
     </div>
     <div class="container matSection">
         <div class="row matHeader">
-            <div class="col hide">Hide</div>
-            <div class="col-6 sort" data-sort='level'>
+            <div class="col hide col-header">Hide</div>
+            <div class="col-6 sort col-header" data-sort='level'>
                 Materials
             </div>
-            <div class="mat-col">
-                
-            </div>
-            <div class="col sort" data-sort='qty'>
+            <div class="mat-col col-header"></div>
+            <div class="col sort col-header" data-sort='qty'>
                 Qty
             </div>
-            <div class="col sort goalCol" data-sort='goal'>
+            <div class="col sort goalCol col-header" data-sort='goal'>
                 Goal
             </div>
         </div>
