--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container matSection">
         <div class="row matHeader">
             <div class="col hide col-header">Hide</div>
-            <div class="col-6 sort col-header" data-sort='level'>
+            <div class="col-4 sort col-header" data-sort='level'>
                 Materials
             </div>
             <div class="mat-col col-header"></div>
@@ -95,6 +95,9 @@
             </div>
             <div class="col sort goalCol col-header" data-sort='goal'>
                 Goal
+            </div>
+            <div class="col sort col-header" data-sort='Diff'>
+                Diff
             </div>
         </div>
         <div class="row scroll">
