--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col sort goalCol col-header" data-sort='goal'>
                 Goal
             </div>
-            <div class="col sort col-header" data-sort='Diff'>
+            <div class="col sort col-header" data-sort='diff'>
                 Diff
             </div>
         </div>
