--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="col sort col-header" data-sort='qty'>
                 Qty
             </div>
-            <div class="col sort goalCol col-header" data-sort='goal'>
+            <div class="col sort col-header" data-sort='goal'>
                 Goal
             </div>
             <div class="col sort col-header" data-sort='diff'>
