--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <div class="col sort col-header" data-sort='damaged'>
                 Damaged
             </div>
-            <div class="col sort col-header" data-sort='reoair'>
-                Repairable
+            <div class="col sort col-header" data-sort='repair'>
+                Repair
             </div>
         </div>
         <div class="row scroll">
