--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
     <div class="container matSection tabcontent" id="tabcontent0" style="display:none;">
         <div class="row mat-header">
             <div class="col hide col-header">Hide</div>
-            <div class="col-5 sort col-header" data-sort='materials'>
+            <div class="col-5 sort col-header" data-sort='materials' data-type='material'>
                 Materials
             </div>
             <div class="img-col col-header">
                  
             </div>
-            <div class="col sort col-header" data-sort='qty'>
+            <div class="col sort col-header" data-sort='qty' data-type='material'>
                 Qty
             </div>
-            <div class="col sort col-header" data-sort='goal'>
+            <div class="col sort col-header" data-sort='goal' data-type='material'>
                 Goal
             </div>
-            <div class="col sort col-header" data-sort='diff'>
+            <div class="col sort col-header" data-sort='diff' data-type='material'>
                 Diff
             </div>
         </div>
@@ -119,16 +119,16 @@
     </div>
     <div class="container matSection tabcontent" id="tabcontent1" style="display:none;">
         <div class="row art-header">
-            <div class="col-6 sort col-header" data-sort='artefacts'>
+            <div class="col-6 sort col-header" data-sort='artefacts' data-type='artefact'>
                 Artefacts
             </div>
             <div class="img-col col-header">
                  
             </div>
-            <div class="col sort col-header" data-sort='damaged'>
+            <div class="col sort col-header" data-sort='damaged' data-type='artefact'>
                 Damaged
             </div>
-            <div class="col sort col-header" data-sort='repair'>
+            <div class="col sort col-header" data-sort='repair' data-type='artefact'>
                 Repair
             </div>
         </div>
