--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="container matSection tabcontent" id="tabcontent0" style="display:none;">
         <div class="row mat-header">
             <div class="col hide col-header">Hide</div>
-            <div class="col-5 sort col-header" data-sort='materials' data-type='material'>
+            <div class="col-5 sort col-header" data-sort='level' data-type='material'>
                 Materials
             </div>
             <div class="img-col col-header">
@@ -119,7 +119,7 @@
     </div>
     <div class="container matSection tabcontent" id="tabcontent1" style="display:none;">
         <div class="row art-header">
-            <div class="col-6 sort col-header" data-sort='artefacts' data-type='artefact'>
+            <div class="col-6 sort col-header" data-sort='level' data-type='artefact'>
                 Artefacts
             </div>
             <div class="img-col col-header">
