--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="col sort col-header" data-sort='damaged' data-type='artefact'>
                 Damaged
             </div>
-            <div class="col sort col-header" data-sort='repair' data-type='artefact'>
+            <div class="col sort col-header" data-sort='repairable' data-type='artefact'>
                 Repair
             </div>
         </div>
