--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <div class="img-col col-header">
                  
             </div>
-            <div class="col sort col-header" data-sort='qty' data-type='material'>
-                Qty
+            <div class="col sort col-header" data-sort='diff' data-type='material'>
+                Diff
             </div>
             <div class="col sort col-header" data-sort='price' data-type='material'>
                 Price
