--- a/index.html
+++ b/index.html
@@ -60,19 +60,24 @@
                     </div> -->
                     <div class="row">
 
-                        <div class="col header" title="Exports the current data as a CSV file.">
+                        <!-- <div class="col header" title="Exports the current data as a CSV file.">
                             <button class='nisbutton export'>
                                 Export
+                            </button>
+                        </div> -->
+                        <div class="col header" title="Refreshes material prices">
+                            <button class='nisbutton refreshprices'>
+                                Refresh Prices
                             </button>
                         </div>
                         <div class="col header" title="Clears material Qty column.">
                             <button class="clear nisbutton" data-type="qty" name='qty'>
-                                ClearQty
+                                Clear Qty
                             </button>
                         </div>
                         <div class="col header" title="Clears material Goals column.">
                             <button class="clear nisbutton" data-type="goal" name="goals">
-                                ClearGoals
+                                Clear Goals
                             </button>
                         </div>
                     </div>
