--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="col sort col-header pointer" data-sort='diff' data-type='material'>
                 Diff
             </div>
-            <div class="col sort col-header no-click">
+            <div class="col sort col-header">
                 Price
             </div>
             <!-- <div class="col sort col-header" data-sort='total' data-type='material'>
