--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<script type="text/javascript" src="scripts/pixelmatch.js"></script>
 	<script type="text/javascript" src="scripts/moment.min.js"></script>
+	<script type="text/javascript" src="scripts/buffs.js"></script>
+	<script type="text/javascript" src="scripts/alerter.js"></script>
     
 </head>
 
