--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	<script type="text/javascript" src="scripts/bank.js"></script>
     <script type="text/javascript" src="scripts/artefacts.js"></script>
 	<script type="text/javascript" src="scripts/materials.js"></script>
-	<script type="text/javascript" src="scripts/materialstorage.js"></script>
+    <script type="text/javascript" src="scripts/materialstorage.js"></script>
+    <script type="text/javascript" src="scripts/buffs.js"></script>
+	<script type="text/javascript" src="scripts/alerter.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<script type="text/javascript" src="scripts/pixelmatch.js"></script>
 	<script type="text/javascript" src="scripts/moment.min.js"></script>
-	<script type="text/javascript" src="scripts/buffs.js"></script>
-	<script type="text/javascript" src="scripts/alerter.js"></script>
     
 </head>
 
@@ -51,6 +51,13 @@
                         </div>
                         <div class="checkbox">
                             <input type="checkbox" class="edit" />
+                        </div>
+
+                        <div class="checkbox-header" title="Keep track of gibberish stone">
+                            Prayer
+                        </div>
+                        <div class="checkbox">
+                            <input type="checkbox" class="prayer" />
                         </div>
                     </div>
                     <!-- <div class="row">
