--- a/manual.html
+++ b/manual.html
@@ -17,12 +17,15 @@
 	<script type="text/javascript" src="scripts/alt1lib.js"></script>
 	<script type="text/javascript" src="scripts/tooltip.js"></script>
 	<script type="text/javascript" src="scripts/bank.js"></script>
+    <script type="text/javascript" src="scripts/artefacts.js"></script>
 	<script type="text/javascript" src="scripts/materials.js"></script>
 	<script type="text/javascript" src="scripts/materialstorage.js"></script>
+	<script type="text/javascript" src="scripts/buffs.js"></script>
+	<script type="text/javascript" src="scripts/alerter.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<script type="text/javascript" src="scripts/pixelmatch.js"></script>
-    <script type="text/javascript" src="scripts/artefacts.js"></script>
-    <script type="text/javascript" src="scripts/imagediff.min.js"></script>
+	<script type="text/javascript" src="scripts/moment.min.js"></script>
+
 	<style type="text/css">
 		body{overflow-y:auto !important;}
 
@@ -69,7 +72,7 @@
 	</style>
 </head>
 <body class="nis">
-    <div style="background-image: url('http://localhost:8080/images/silentbank1.png');"> 
+    <div style="background-image: url('http://localhost:8080/images/buffbar.png');"> 
 		<canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
