--- a/manual.html
+++ b/manual.html
@@ -72,7 +72,7 @@
 	</style>
 </head>
 <body class="nis">
-    <div style="background-image: url('http://localhost:8080/images/buffbar.png');"> 
+    <div style="background-image: url('http://localhost:8080/images/normalbank1.png');"> 
 		<canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
