--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <div onclick="settab(1);" id="contenttab1" class="contenttab">Artefacts</div>
                         <div onclick="settab(2);" id="contenttab2" class="contenttab">Prices</div>
                         <div onclick="settab(3);" id="contenttab3" class="contenttab">Research</div>
+                        <div onclick="settab(4);" id="contenttab4" class="contenttab">Settings</div>
                     </div>
                 </div>
             </div>
@@ -200,6 +201,24 @@
             </button>
         </div>
         <div class="row research">
+        </div>
+    </div>
+    <div class="container tabcontent" id="tabcontent4" style="display:none;">
+        <div class="row">
+            <div class="settings-header">
+                Show image data in console
+            </div>
+            <div class="settings-checkbox">
+                <input type="checkbox" class="showImageData" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="settings-header">
+                Hightlight bank slots when searching
+            </div>
+            <div class="settings-checkbox">
+                <input type="checkbox" class="highlightSlots" />
+            </div>
         </div>
     </div>
 </body>
