--- a/manual.html
+++ b/manual.html
@@ -71,7 +71,7 @@
 	</style>
 </head>
 <body class="nis">
-    <div style="background-image: url('http://localhost:8080/images/mats2.png');"> 
+    <div style="background-image: url('http://localhost:8080/images/tabs3.png');"> 
 		<canvas id="myCanvas" width="2000" height="2000"></canvas>
     </div>
 </body>
