--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="menu" class="menu">
                     <div class="row">
                         <div class="col">
-                            <button class="nisbutton" onclick="start();">
+                            <button class="tracker nisbutton">
                                 Start
                             </button>
                         </div>
