--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="menu" class="menu">
                     <div class="row">
                         <div class="col">
-                            <button class="tracker nisbutton">
+                            <button class="nisbutton tracker">
                                 Start
                             </button>
                         </div>
@@ -75,12 +75,12 @@
                             </button>
                         </div> -->
                         <div class="col header" title="Refreshes material prices">
-                            <button class='nisbutton refreshPrices'>
+                            <button class="nisbutton refreshPrices">
                                 Refresh Prices
                             </button>
                         </div>
                         <div class="col header" title="Clears material Qty column.">
-                            <button class="clear nisbutton" data-type="qty" name='qty'>
+                            <button class="clear nisbutton" data-type="qty" name="qty">
                                 Clear Qty
                             </button>
                         </div>
